test-curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-curl
spec:
  tolerations:
  - key: "workload"
    operator: "Equal"
    value: "user"
    effect: "NoSchedule"
  nodeSelector:
    agentpool: user
  containers:
  - name: curl
    image: curlimages/curl
    command: ["sleep", "3600"]
