allow-all-temp.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all-for-testing
  namespace: default
spec:
  action: ALLOW
